// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show entity list field mount 1`] = `
<fieldlayout-stub class="ShowEntityListField">
	<entitylist-stub module="show/entity-lists/fieldKey" filters="" visible="true" inline="">
		<actionbar-stub ready="true" class="ShowEntityListField__action-bar">
			<div class="section__header d-grid">
				<entitylisttitle-stub>
					<h2 class="ShowEntityListField__label section__title mb-0">
						label
					</h2>
				</entitylisttitle-stub>
			</div>
		</actionbar-stub>
	</entitylist-stub>
</fieldlayout-stub>
`;

exports[`show entity list field mount collapsed 1`] = `
<fieldlayout-stub class="ShowEntityListField ShowEntityListField--collapsed">
	<entitylist-stub module="show/entity-lists/fieldKey" filters="" inline="">
		<actionbar-stub ready="true" collapsed="true" class="ShowEntityListField__action-bar">
			<div class="section__header section__header--collapsable position-relative">
				<div class="row align-items-center gx-0 h-100">
					<div class="col-auto">
						<details>
							<summary class="stretched-link">
								<span class="visually-hidden">label</span>
							</summary>
						</details>
					</div>
					<div class="col">
						<entitylisttitle-stub>
							<h2 class="ShowEntityListField__label section__title mb-0">
								label
							</h2>
						</entitylisttitle-stub>
					</div>
				</div>
			</div>
		</actionbar-stub>
	</entitylist-stub>
</fieldlayout-stub>
`;
